yaml/min-cluster-allinone/nacos/mysql-slave-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave
  namespace: nacos
  labels:
    name: mysql-slave
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    name: mysql-slave
